disable globe view for 2.8.0

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -133,8 +133,7 @@ var map = window.map = new mapboxgl.Map({
     pitch: 85,
     bearing: 60,
     style: 'mapbox://styles/mapbox/streets-v11',
-    hash: true,
-    projection: 'globe'
+    hash: true
 });
 
 const r = 255 * 0.75;
