--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -47,8 +47,7 @@ var map = window.map = new mapboxgl.Map({
     center: [-122.45814, 37.76159],
     style: 'mapbox://styles/mapbox/streets-v11',
     // style: 'mapbox://styles/claretrainor/ck2pc4ljf1jbe1codiy7oxzjg', // Style with additional traffic vector source.
-    hash: true,
-    projection: 'globe'
+    hash: true
 });
 
 map.addControl(new mapboxgl.NavigationControl());
