--- a/debug/globe-fill-extrusion.html
+++ b/debug/globe-fill-extrusion.html
@@ -34,8 +34,7 @@ var map = window.map = new mapboxgl.Map({
     zoom: 12.5,
     center: [-122.4194, 37.7749],
     style: 'mapbox://styles/endanke/ckw0r1ywi3f3b14mpoly55wjc',
-    hash: true,
-    projection: 'globe'
+    hash: true
 });
 
 map.on('style.load', function() {
