--- a/debug/markers.html
+++ b/debug/markers.html
@@ -21,6 +21,7 @@
         <label>Projection:</label>
         <select id="projName">
             <option value="mercator" selected>Mercator</option>
+            <option value="globe">Globe</option>
             <option value="albers">Albers USA</option>
             <option value="equalEarth">Equal Earth</option>
             <option value="equirectangular">Equirectangular</option>
@@ -51,8 +52,8 @@ const spinningMarkers = [];
         var w = bounds.getWest();
         var e = bounds.getEast();
 
-        var lng = w + (e - w) * (i / 3);
-        var lat = s + (n - s) * (j / 3);
+        var lng = w + (e - w) * ((i + .5) / 3);
+        var lat = s + (n - s) * ((j + .5) / 3);
 
         var popup = new mapboxgl.Popup().setHTML(`Pitch Alignment: ${pitchAlignment}<br>Rotation Alignment: ${rotationAlignment}`);
 
