--- a/debug/i18n.html
+++ b/debug/i18n.html
@@ -145,6 +145,8 @@ var map = window.map = new mapboxgl.Map({
     worldview: worldview.value
 });
 
+mapboxgl.setRTLTextPlugin('https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-rtl-text/v0.2.0/mapbox-gl-rtl-text.js');
+
 map.on('style.load', () => {
     map.addSource('mapbox://mapbox.mapbox-streets-v8-i18n', {
         type: 'vector',
