Add worldview render tests

--- a/debug/i18n.html
+++ b/debug/i18n.html
@@ -217,10 +217,10 @@ map.on('style.load', () => {
                 ["==", ["get", "worldview"], "IN"], "#7FDBFF",
                 ["==", ["get", "worldview"], "CN"], "#FF851B",
                 ["==", ["get", "worldview"], "JP"], "#FFDC00",
-                ["==", ["get", "worldview"], "RU"], "#DDDDDD",
-                ["==", ["get", "worldview"], "MA"], "#DDDDDD",
-                ["==", ["get", "worldview"], "AR"], "#DDDDDD",
-                ["==", ["get", "worldview"], "TR"], "#DDDDDD",
+                ["==", ["get", "worldview"], "RU"], "#eb4034",
+                ["==", ["get", "worldview"], "MA"], "#17b03b",
+                ["==", ["get", "worldview"], "AR"], "#182acc",
+                ["==", ["get", "worldview"], "TR"], "#9e106a",
                 "#34b5cf"
             ]
         }
@@ -251,10 +251,10 @@ map.on('style.load', () => {
                 ["==", ["get", "worldview"], "IN"], "#7FDBFF",
                 ["==", ["get", "worldview"], "CN"], "#FF851B",
                 ["==", ["get", "worldview"], "JP"], "#FFDC00",
-                ["==", ["get", "worldview"], "RU"], "#DDDDDD",
-                ["==", ["get", "worldview"], "MA"], "#DDDDDD",
-                ["==", ["get", "worldview"], "AR"], "#DDDDDD",
-                ["==", ["get", "worldview"], "TR"], "#DDDDDD",
+                ["==", ["get", "worldview"], "RU"], "#eb4034",
+                ["==", ["get", "worldview"], "MA"], "#17b03b",
+                ["==", ["get", "worldview"], "AR"], "#182acc",
+                ["==", ["get", "worldview"], "TR"], "#9e106a",
                 "#79a0a8"
             ]
         }
