make button more user-friendly

--- a/debug/heatmap-layer.html
+++ b/debug/heatmap-layer.html
@@ -12,10 +12,10 @@
             position: absolute;
             top: 0; left: 0;
             margin: 15px;
-            border: none;
             font-size: 14px;
             padding: 8px;
-            background-color: white;
+            background-color: lightblue;
+            font-weight: bold;
         }
     </style>
     </style>
