--- a/debug/animate-point-along-route.html
+++ b/debug/animate-point-along-route.html
@@ -149,6 +149,7 @@
                 // To add a new image to the style at runtime see
                 // https://docs.mapbox.com/mapbox-gl-js/example/add-image/
                 'icon-image': 'airport-15',
+                'icon-size': 3,
                 'icon-rotate': ['get', 'bearing'],
                 'icon-rotation-alignment': 'map',
                 'icon-allow-overlap': true,
